// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the empty list message when there is no kiosks to show 1`] = `
<div
  className="overflow-x-auto shadow-lg sm:rounded-lg p-2"
>
  <h5
    className="mb-2 text-2xl font-bold tracking-tight text-gray-700"
  >
    Kiosks
  </h5>
  <div
    className="flex mb-2"
  >
    <div
      className="mr-4"
    >
      <label
        htmlFor="searchFilter"
        id="search-label"
      >
        Search
      </label>
      <br />
      <div
        className="relative w-full"
      >
        <div
          className="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
        >
          <svg
            className="w-5 h-5 text-gray-500 dark:text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-labelledby="search-label"
          className="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2"
          name="searchFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        htmlFor="statusFilter"
      >
        Status filter
      </label>
      <br />
      <select
        className="block p-2 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
        name="statusFilter"
        onChange={[Function]}
        value="all"
      >
        <option
          value="all"
        >
          All Kiosks
        </option>
        <option
          value="open"
        >
          Opened Kiosks
        </option>
        <option
          value="closed"
        >
          Closed Kiosks
        </option>
      </select>
    </div>
    <button
      className="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 focus:outline-none h-10 mt-auto"
      onClick={[MockFunction]}
      type="button"
    >
      New Kiosk
    </button>
  </div>
  <table
    className="w-full text-sm text-left text-gray-500"
  >
    <thead
      className="text-xs text-gray-700 uppercase bg-gray-50"
    >
      <tr>
        <th
          className="px-6 py-3"
          scope="col"
        >
          ID
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Serial Key
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Description
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Is Closed?
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Opens at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Closes at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="bg-white border-b"
      >
        <th
          className="px-6 py-4 text-center"
          colSpan={7}
          scope="row"
        >
          No results to show, try to change the filters or create a new kiosk.
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders the kiosk list correctly 1`] = `
<div
  className="overflow-x-auto shadow-lg sm:rounded-lg p-2"
>
  <h5
    className="mb-2 text-2xl font-bold tracking-tight text-gray-700"
  >
    Kiosks
  </h5>
  <div
    className="flex mb-2"
  >
    <div
      className="mr-4"
    >
      <label
        htmlFor="searchFilter"
        id="search-label"
      >
        Search
      </label>
      <br />
      <div
        className="relative w-full"
      >
        <div
          className="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
        >
          <svg
            className="w-5 h-5 text-gray-500 dark:text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-labelledby="search-label"
          className="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2"
          name="searchFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        htmlFor="statusFilter"
      >
        Status filter
      </label>
      <br />
      <select
        className="block p-2 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
        name="statusFilter"
        onChange={[Function]}
        value="all"
      >
        <option
          value="all"
        >
          All Kiosks
        </option>
        <option
          value="open"
        >
          Opened Kiosks
        </option>
        <option
          value="closed"
        >
          Closed Kiosks
        </option>
      </select>
    </div>
    <button
      className="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 focus:outline-none h-10 mt-auto"
      onClick={[MockFunction]}
      type="button"
    >
      New Kiosk
    </button>
  </div>
  <table
    className="w-full text-sm text-left text-gray-500"
  >
    <thead
      className="text-xs text-gray-700 uppercase bg-gray-50"
    >
      <tr>
        <th
          className="px-6 py-3"
          scope="col"
        >
          ID
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Serial Key
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Description
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Is Closed?
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Opens at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Closes at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="bg-white border-b hover:bg-gray-100"
      >
        <th
          className="px-6 py-4"
          scope="row"
        >
          #1
        </th>
        <td
          className="px-6 py-4"
        >
          NDK-1
        </td>
        <td
          className="px-6 py-4"
        >
          Burguer King
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          No
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          09:00
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          22:00
        </td>
        <td
          className="px-6 py-4 flex justify-center"
        >
          <button
            className="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2"
            onClick={[Function]}
            type="button"
          >
            Logs
          </button>
          <button
            className="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 focus:outline-none"
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
          <button
            className="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="bg-white border-b hover:bg-gray-100"
      >
        <th
          className="px-6 py-4"
          scope="row"
        >
          #2
        </th>
        <td
          className="px-6 py-4"
        >
          NDK-2
        </td>
        <td
          className="px-6 py-4"
        >
          Mac
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          No
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          09:00
        </td>
        <td
          className="px-6 py-4 text-center"
        >
          22:00
        </td>
        <td
          className="px-6 py-4 flex justify-center"
        >
          <button
            className="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2"
            onClick={[Function]}
            type="button"
          >
            Logs
          </button>
          <button
            className="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 focus:outline-none"
            onClick={[Function]}
            type="button"
          >
            Edit
          </button>
          <button
            className="focus:outline-none text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders the loader correctly 1`] = `
<div
  className="overflow-x-auto shadow-lg sm:rounded-lg p-2"
>
  <h5
    className="mb-2 text-2xl font-bold tracking-tight text-gray-700"
  >
    Kiosks
  </h5>
  <div
    className="flex mb-2"
  >
    <div
      className="mr-4"
    >
      <label
        htmlFor="searchFilter"
        id="search-label"
      >
        Search
      </label>
      <br />
      <div
        className="relative w-full"
      >
        <div
          className="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none"
        >
          <svg
            className="w-5 h-5 text-gray-500 dark:text-gray-400"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-labelledby="search-label"
          className="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2"
          name="searchFilter"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        htmlFor="statusFilter"
      >
        Status filter
      </label>
      <br />
      <select
        className="block p-2 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
        name="statusFilter"
        onChange={[Function]}
        value="all"
      >
        <option
          value="all"
        >
          All Kiosks
        </option>
        <option
          value="open"
        >
          Opened Kiosks
        </option>
        <option
          value="closed"
        >
          Closed Kiosks
        </option>
      </select>
    </div>
    <button
      className="ml-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 focus:outline-none h-10 mt-auto"
      onClick={[MockFunction]}
      type="button"
    >
      New Kiosk
    </button>
  </div>
  <table
    className="w-full text-sm text-left text-gray-500"
  >
    <thead
      className="text-xs text-gray-700 uppercase bg-gray-50"
    >
      <tr>
        <th
          className="px-6 py-3"
          scope="col"
        >
          ID
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Serial Key
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Description
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Is Closed?
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Opens at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Closes at
        </th>
        <th
          className="px-6 py-3 text-center"
          scope="col"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="bg-white border-b"
      >
        <th
          className="px-6 py-4"
          colSpan={7}
          scope="row"
        >
          <div
            className="h-10 w-10 mx-auto"
          >
            <svg
              className="inline text-gray-200 animate-spin fill-blue-600"
              fill="none"
              role="status"
              viewBox="0 0 100 101"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
                fill="currentColor"
              />
              <path
                d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
                fill="currentFill"
              />
            </svg>
          </div>
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;
